# MagicCamera

app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
magicfilter/: CMakeLists.txt  build.gradle
